--- a/src/components/Bph.css
+++ b/src/components/Bph.css
@@ -55,3 +55,10 @@
 } .Bph .card.right .bphDesc  {
     text-align: right;
 }
+
+@media screen and (max-width: 576px) {
+    .Bph {
+        padding: 0 2%;
+    }
+    
+}
