--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -65,7 +65,7 @@ nav #navToggler {
         position: fixed;
         width: 100%;
         height: 300px;
-        top: -30vh;
+        top: -50vh;
         left: 0;
         flex-direction: column;
         justify-content: space-evenly;
